--- a/portfolio.html
+++ b/portfolio.html
@@ -43,8 +43,9 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <img src="assets/images/pic1.jpg" alt="Image 1" width="100%">
-                <h4>Image 1</h4>
+
+              <img src="assets/images/hangman7.png" alt="Image 1" width="100%">
+                <h4>Hangman Game</h4>
             </div>
             <div class="col-md-6">
               <img src="assets/images/pic2.jpg" alt="Image 2" width="100%">
