--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
           <div class="row">
             <div class="col-md-6">
 
-              <img src="assets/images/hangman7.png" alt="Image 1" width="100%">
+              <img src="assets/images/hangman7.png" alt="Hangman" width="100%" href="https://mkkhairullah.github.io/HangmanGame/">
                 <h4>Hangman Game</h4>
             </div>
             <div class="col-md-6">
