--- a/portfolio.html
+++ b/portfolio.html
@@ -44,8 +44,8 @@
           <div class="row">
             <div class="col-md-6">
 
-              <img src="assets/images/hangman7.png" alt="Hangman" width="100%" height="50%" href="https://mkkhairullah.github.io/HangmanGame/">
-                <h4>Hangman Game</h4>
+              <img src="assets/images/hangman7.png" alt="Hangman" width="70%">
+                <a href="https://mkkhairullah.github.io/HangmanGame/">Hangman Game </a>
             </div>
             <div class="col-md-6">
               <img src="assets/images/pic2.jpg" alt="Image 2" width="100%">
